--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
-<h1>
-  XHY的笔记
-</h1>
-
-<div>
-  <div id="item">
-    <div id="item_name">操作系统</div>
-    <div id="links">
-      <a href="3.1.1~3.13 内存管理初步..html"></a>
-    </div>
-  </div>
-</div>
+<html>
+  <head></head>
+  <body>
+    <div class="title"></div>
+    <a href="3.1.1-3.13 内存管理初步.html">link</a>
+  </body>
+</html>
